--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ section div {
   height: 100px;
   font-size: 30px;
   font-weight: bold;
+  transition: all linear 0.07s;
   border: 1px solid lime;
 }
 .key p {
@@ -45,4 +46,11 @@ section div {
   font-weight: normal;
   text-transform: uppercase;
   color: gold;
+}
+
+.test {
+  transform: scale(1.1);
+  border-color: antiquewhite;
+  background-color: black;
+  box-shadow: 3px 4px 10px 0.5px rgb(255, 170, 0);
 }/*# sourceMappingURL=style.css.map */
