--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,37 @@
 }
 
 body {
-  background-color: #333;
   font-family: "Montserrat", "sans-serif";
   color: white;
+  width: 100%;
+  height: 100vh;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  background: url(/img/background.png);
+  background-size: 140%;
+  background-position: "";
+}
+
+.bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 5, 39, 0.418);
 }
 
 .wrapper {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   max-width: 1400px;
+  z-index: 1;
 }
 
 section {
@@ -37,8 +55,10 @@ section div {
   height: 100px;
   font-size: 30px;
   font-weight: bold;
+  text-transform: uppercase;
+  border: 1px solid rgb(195, 0, 255);
+  background-color: rgba(33, 5, 39, 0.418);
   transition: all linear 0.07s;
-  border: 1px solid lime;
 }
 .key p {
   margin-top: 10px;
@@ -48,9 +68,14 @@ section div {
   color: gold;
 }
 
-.test {
+.playing {
   transform: scale(1.1);
-  border-color: antiquewhite;
+  border-color: rgb(255, 255, 255);
   background-color: black;
   box-shadow: 3px 4px 10px 0.5px rgb(255, 170, 0);
+  color: gold;
+}
+.playing p {
+  transform: scale(1.1);
+  color: tomato;
 }/*# sourceMappingURL=style.css.map */
